--- a/app/src/main/res/layout/activity_exercise.xml
+++ b/app/src/main/res/layout/activity_exercise.xml
@@ -73,6 +73,36 @@
 
     </FrameLayout>
 
+    <TextView
+        android:id="@+id/tvUpComing"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:textColor="@color/colorPrimary"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/tvUpComingExerciseName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/flRestView"
+        android:text="UPCOMING EXERCISE"
+        tools:visibility="visible" />
+
+    <TextView
+        android:id="@+id/tvUpComingExerciseName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:textColor="@color/colorPrimary"
+        android:textSize="22sp"
+        android:textStyle="bold"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvUpComing"
+        tools:text="exerciseName"
+        tools:visibility="visible" />
+
     <ImageView
         android:id="@+id/ivExercise"
         android:layout_width="match_parent"
@@ -87,29 +117,29 @@
         android:id="@+id/tvExercise"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         android:text="ExerciseName"
+        android:textColor="@color/colorAccent"
         android:textSize="22sp"
         android:textStyle="bold"
-        android:textColor="@color/colorAccent"
         android:visibility="gone"
-        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@id/flExercise"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/ivExercise"
-        app:layout_constraintBottom_toTopOf="@id/flExercise"
         tools:visibility="visible" />
 
     <FrameLayout
         android:id="@+id/flExercise"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:layout_marginBottom="8dp"
         android:background="@drawable/start_border"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvExercise"
-        android:layout_marginBottom="8dp"
         tools:visibility="visible">
 
         <ProgressBar
