--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="main_screen_layout_padding">5dp</dimen>
     <dimen name="default_text_size">22sp</dimen>
+    <dimen name="text_BMI">18sp</dimen>
 </resources>
