--- a/app/src/main/res/layout/activity_finnish.xml
+++ b/app/src/main/res/layout/activity_finnish.xml
@@ -60,7 +60,7 @@
         android:layout_gravity="bottom"
         android:layout_marginTop="35dp"
         android:layout_marginHorizontal="16dp"
-        android:background="@drawable/btn_finish_border"
+        android:background="@drawable/btn_border"
         android:text="FINISH"
         android:textColor="#FFFFFF"
         android:textSize="18sp" />
